--- a/index.html
+++ b/index.html
@@ -11,21 +11,46 @@
 <body>
     <main>
         <h1>Актуальные события городов России</h1>
+        <h2></h2>
         <p>Путеводитель по России: лучшие достопримечательности России, куда сходить самостоятельно, что посмотреть /
             Лучшие места России для туристов / ТОП 20 достопримечательностей России, которые непременно стоит посетить
         </p>
-    
-    <ul> <!--Ненумерованный спиок-->
-        <li>Санкт-Петербург и ЛО
-            <ol> <!--Нумерованный спиок-->
-                <li>Кронштад</li>
-                <li>Гатчина</li>
-            </ol>
-        </li>
-        <li>Москва и МО</li>
-        <li>Крым</li>
-    </ul>
-</main>
+
+        <ul> <!--Ненумерованный спиок-->
+            <li><h4>Санкт-Петербург и ЛО</h4>
+                <ol> <!--Нумерованный спиок-->
+                    <li><h5>Кронштад</h5></li>
+                    <li><h5>Гатчина</h5></li>
+                </ol>
+            </li>
+            <li><h4>Москва и МО</h4></li>
+            <li><h4>Крым</h4></li>
+        </ul>
+        <h2>Велотур в горы Крым</h2>
+        <p>Совершите незабываемое путешествие на вершину горы с вашим двухколесным другом!</p>
+        <h3>Безопасность</h3>
+        <p>В велопутешествии вас будет сопровождать профессиональный тренер- гид, который не позволит вам получить
+            травму</p>
+        <h3>Незабываемые эмоции</h3>
+        <p>Свежий горный воздух, голубое небо, солнце и двухколесный друг рядом. Что может быть лучше?</p>
+        <h3>Доступная цена</h3>
+        <p>Стоимость путешествия вас приятно удивит. Такую велопрогулку может позволить себе каждый</p>
+        <h2>Отзывы наших клиентов</h2>
+        <p>“Прекрасная велопрогулка по горной местности в чудесной компании! Привез с собой массу положительных эмоций и
+            красивых фотографий!”
+            <br>Андрей Шварц</br>
+        </p>
+<h2>Особенности тура</h2>
+<ul>
+    <li>Велопрогулка совершается на вашем или арендованном у нас велосипеде.</li>
+    <li>Маршрут пролегает по горной местности с набором высоты до 750 метров.</li>
+    <li>Путь покорится практичеки каждому, даже с невысокой физической подготовкой.</li>
+    <li>Можно поехать всей семьей! К нашей велопрогулке допускаются дети от 12 лет, в сопровождении взрослых.</li>
+    <li>На протяжении всего маршрута вас будет сопровождать профессиональный тренер-гид.</li>
+    <li>Не упустите возможность покорить вершину горы и насладиться потрясающим видом!</li>
+</ul>
+
+    </main>
 </body>
 
 </html>
