--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header>
-        <span>ourcountry </span>
+    <header id="head"> <!--Ссылка на начало страницы блок footer-->
+        <span> <span style="color: red;">our</span><span style="color: deepskyblue;">country</span> </span>
         <img src="./images/logo_main.png" alt="логотип">
-        <a href="tel:78007877725">"+7-800-787-77-25</a>
+        <a href="tel:78007877725">+7-800-787-77-25</a>
         <button>Забронировать</button>
     </header>
     <nav>
@@ -59,7 +59,7 @@
                     <h2>Велотур в горы Крым</h2>
                     <p>Совершите незабываемое путешествие на вершину горы с вашим двухколесным другом!</p>
                 </div>
-                <img src="./images/mount.jpg" alt="тут были горы" display height="400">
+                <img src="./images/velotury-krym-3.jpg" alt="тут были горы" height="400px">
             </div>
             <p>Совершите незабываемое путешествие на вершину горы с вашим двухколесным другом!</p>
             <button>Забронировать</button>
@@ -76,8 +76,10 @@
             <p>“Прекрасная велопрогулка по горной местности в чудесной компании! Привез с собой массу положительных
                 эмоций и
                 красивых фотографий!”</p>
-            <span>Андрей Шварц</span>
-            <img src="./images/star.png" alt="звезда" style="height: 10;">
+            <span> Завьялов Арсений <span><img src="./images/star.png" alt="звезда" height="20" width="20"><img
+                        src="./images/star.png" alt="звезда" height="20" width="20"><img src="./images/star.png"
+                        alt="звезда" height="20" width="20"><img src="./images/star.png" alt="звезда" height="20"
+                        width="20"><img src="./images/star.png" alt="звезда" height="20" width="20"></span> </span>
         </section>
         <section>
             <h2>Особенности тура</h2>
@@ -91,10 +93,22 @@
                 <li>На протяжении всего маршрута вас будет сопровождать профессиональный тренер-гид.</li>
                 <li>Не упустите возможность покорить вершину горы и насладиться потрясающим видом!</li>
             </ul>
+            <img height="400px" src="./images/cyclist-resting-silhouette-sunset-active-outdoor-sport-concept 1.png"
+                alt="велосипед">
         </section>
     </main>
-    <footer>OOO "Наша Страна", 2023 г
-        <br>Inst: @ourcountry</br>
+    <footer>
+        <div>OOO "Наша Страна", 2023 г
+            <br>Inst: @<span style="color: red;">our</span><span style="color: deepskyblue;">country</span></br>
+        </div>
+        <div>
+            <p>Для уточнения информации звоните по номеру <a href="tel:78007877725">+7-800-787-77-25</a>, а предложения
+                по сотрудничеству отправляйте
+                на почту <a href="mailto:alkonst4@yandex.ru">alkonst4@yandex.ru</a>
+            </p>
+
+        </div>
+        <div><a href="#head">В начало</a></div>
     </footer>
 </body>
 
