--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8"> <!--страница на русском-->
     <title>Наша страна</title> <!-- Заголовок страницы, отображается
         во вкладке -->
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"> 
 </head>
 
 <body>
@@ -95,6 +96,36 @@
             </ul>
             <img height="400px" src="./images/cyclist-resting-silhouette-sunset-active-outdoor-sport-concept 1.png"
                 alt="велосипед">
+        </section>
+        <section> <!--БЛОК С РЕКЛАМОЙ-->
+            <iframe src="./ads.html" frameborder="0" height="400"></iframe>
+            <iframe src="./ads.html" frameborder="0" height="400"></iframe>
+        </section>
+        <section><!--БЛОК ТАБЛИЧКИ-->
+            <table border="1" wight="600"> 
+                <thead>
+                    <tr>
+                        <th align="center">Страна</th> <!--align="center" - выравнивание по центру-->
+                        <th align="center">Название</th>
+                        <th align="center">Кол-во часов</th>
+                        <th align="center">Цена с человека (рубли)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td align="center">Россия</td>
+                        <td align="center">Экскурсия на велосипеде <br> Алушта - Утес</td>
+                        <td align="center">6</td>
+                        <td align="center">2100</td>
+                    </tr>
+                    <tr>
+                        <td align="center">Россия</td>
+                        <td align="center">Велотур Солнечная-Царская тропа, Ласточкино гнездо<br> Алушта - Ласточкино гнездо</td>
+                        <td align="center">6</td>
+                        <td align="center">6600</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
     <footer>
