--- a/ads.html
+++ b/ads.html
@@ -3,20 +3,7 @@
 
     <head>
         <title>Реклама</title>
-        <style>
-            body {
-                margin: 0;
-                height: 100vh;
-            }
-
-            div {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                background: #eee;
-                height: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="./ads.css">
     </head>
 
     <body>
