--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
         <section class="first-section">
-            <h1 class="header">Актуальные события городов России</h1>
+            <h1 class="h1-header">Актуальные события городов России</h1>
             <p class="text">Путеводитель по России: лучшие достопримечательности России, куда сходить самостоятельно,
                 что посмотреть
                 /
