--- a/index.html
+++ b/index.html
@@ -13,24 +13,13 @@
 </head>
 
 <body>
-    <header id="head"> <!--Ссылка на начало страницы блок footer-->
-
-        <section class="cap-section">
-
-            <div class="cap-div">
-                <span> OurCountry <img src="./images/logo_main.png" alt="логотип"></span>
-            </div>
-
-            <div class="cap-div">
-                <a href="tel:78007877725">+7-800-787-77-25</a>
-            </div>
-
-            <div class="cap-div">
-                <button class="btn btn_small">Забронировать</button>
-            </div>
+    <header class="header" id="head"> <!--Ссылка на начало страницы блок footer-->
+                <span class="header__title"> OurCountry </span>
+                <img class="header__logo" src="./images/logo_main.png" alt="логотип">
             
-
-        </section>
+                <a class="header__tel" href="tel:78007877725">+7-800-787-77-25</a>
+                <button class="header__btn btn btn_small">Забронировать</button>
+            
     </header>
     <nav>
         <a href="/main">Главная</a>
@@ -41,8 +30,8 @@
 
     <main>
         <section class="first-section">
-            <h1 class="h1-header">Актуальные события городов России</h1>
-            <p class="text">Путеводитель по России: лучшие достопримечательности России, куда сходить самостоятельно,
+            <h1 class="first-section__header">Актуальные события городов России</h1>
+            <p class="first-section__text">Путеводитель по России: лучшие достопримечательности России, куда сходить самостоятельно,
                 что посмотреть
                 /
                 Лучшие места России для туристов / ТОП 20 достопримечательностей России, которые непременно стоит
