--- a/index.html
+++ b/index.html
@@ -45,25 +45,26 @@
             <p>Совершите незабываемое путешествие на вершину горы с вашим двухколесным другом!</p>
             <span><img id="krim" src="./images/velotury-krym-3.jpg" alt="тут были горы"> </span>
             </div> -->
+
         <section class="second-section">
-            <div class="item">
+            <div class="advantage">
                 <img src="./images/second-selection/icon_1.png" alt="Картинка">
-                <h3 class="color-header green">Безопасность</h3>
-                <p>В велопутешествии вас будет сопровождать профессиональный тренер- гид, который не позволит вам
+                <h3 class="advantage__color-header advantage__color-header_green">Безопасность</h3>
+                <p class="advantage__text">В велопутешествии вас будет сопровождать профессиональный тренер- гид, который не позволит вам
                     получить
                     травму</p>
             </div>
 
-            <div class="item">
+            <div class="advantage">
                 <img src="./images/second-selection/icon_2.png" alt="Картинка">
-                <h3 class="color-header yellow">Незабываемые эмоции</h3>
-                <p>Свежий горный воздух, голубое небо, солнце и двухколесный друг рядом. Что может быть лучше?</p>
+                <h3 class="advantage__color-header advantage__color-header_yellow">Незабываемые эмоции</h3>
+                <p class="advantage__text">Свежий горный воздух, голубое небо, солнце и двухколесный друг рядом. Что может быть лучше?</p>
             </div>
 
-            <div class="item">
+            <div class="advantage">
                 <img src="./images/second-selection/icon_3.png" alt="Картинка">
-                <h3 class="color-header red">Доступная цена</h3>
-                <p>Стоимость путешествия вас приятно удивит. Такую велопрогулку может позволить себе каждый</p>
+                <h3 class="advantage__color-header advantage__color-header_red">Доступная цена</h3>
+                <p class="advantage__text">Стоимость путешествия вас приятно удивит. Такую велопрогулку может позволить себе каждый</p>
             </div>
         </section>
         <section>
