--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
     <title>Наша страна</title> <!-- Заголовок страницы, отображается
         во вкладке -->
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./index1.css">
     <link rel="stylesheet" href="./main.css">
 </head>
 
